front/_k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lokalsi-front-deployment
  namespace: lokalsi-front
spec:
  selector:
    matchLabels:
      app: lokalsi-front
      tier: lokalsi-front
  replicas: 1
  template:
    metadata:
      labels:
        app: lokalsi-front
        tier: lokalsi-front
    spec:
      containers:
        - name: lokalsi-front
          image: europe-central2-docker.pkg.dev/lokalsi-336415/lokalsi/lokalsi-front:APP_VERSION
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 300
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 360
            periodSeconds: 2
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
