front/_k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lokalsi-front-service
  namespace: lokalsi-front
  labels:
    app: lokalsi-front
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: lokalsi-front
    tier: lokalsi-front
  type: ClusterIP
